JVMTI always on capabilities change code generation too much

XMLWordPrintable

    • b04
    • sparc
    • solaris_9

        The set of always on capabilities include thing which will cause changes in the code the compiler generates which interferes with using JVMTI to support profiling since you aren't profiling the code you would really be executing. In particular this piece of code should change.

          JvmtiExport::set_can_access_local_variables(
            avail.can_access_local_variables ||
            avail.can_redefine_classes ||
            avail.can_retransform_classes);

              Assignee:
              Tom Rodriguez
              Reporter:
              Tom Rodriguez
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: