6943485: JVMTI always on capabilities change code generation too much

Reviewed-by: twisti, dcubed